objects/ERP_Access_Sequence__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Key_Combination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Key Combination</label>
        <referenceTo>ERP_Key_Combination__c</referenceTo>
        <relationshipLabel>ERP Access Sequences (Cost Key Combination)</relationshipLabel>
        <relationshipName>ERP_Access_Sequences4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Pricing_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Pricing Condition</label>
        <referenceTo>ERP_Pricing_Condition__c</referenceTo>
        <relationshipLabel>ERP Access Sequences (Cost Pricing Condition)</relationshipLabel>
        <relationshipName>ERP_Access_Sequences2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Floor_Key_Combination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Floor Key Combination</label>
        <referenceTo>ERP_Key_Combination__c</referenceTo>
        <relationshipLabel>ERP Access Sequences (ERP Key Combination)</relationshipLabel>
        <relationshipName>ERP_Access_Sequences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Floor_Pricing_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Floor Pricing Condition</label>
        <referenceTo>ERP_Pricing_Condition__c</referenceTo>
        <relationshipLabel>ERP Access Sequences (Floor Type)</relationshipLabel>
        <relationshipName>ERP_Access_Sequences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hide_for_Price_Requester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide for Price Requester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_End_User_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate if this Access Sequence belongs to the End User Rebate Flow (DPT Garments)</description>
        <label>Is End User Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Combination__c</fullName>
        <label>Key Combination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Net_Floor_Key_Combination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Net Floor Key Combination</label>
        <referenceTo>ERP_Key_Combination__c</referenceTo>
        <relationshipLabel>ERP Access Sequences (Net Floor Key Combination)</relationshipLabel>
        <relationshipName>ERP_Access_Sequences2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Reference_Key_Combination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Net Reference Key Combination</label>
        <referenceTo>ERP_Key_Combination__c</referenceTo>
        <relationshipLabel>ERP Access Sequences (Net Reference Key Combination)</relationshipLabel>
        <relationshipName>ERP_Access_Sequences3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pricing_Condition__c</fullName>
        <label>Pricing Condition</label>
        <referenceTo>ERP_Pricing_Condition__c</referenceTo>
        <relationshipLabel>ERP Access Sequences</relationshipLabel>
        <relationshipName>PA_Access_Sequences</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_Key_Combination__c</fullName>
        <label>Pricing Key Combination</label>
        <referenceTo>ERP_Key_Combination__c</referenceTo>
        <relationshipLabel>ERP Access Sequences</relationshipLabel>
        <relationshipName>PA_Access_Sequences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_Key_Combination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Key Combination</label>
        <referenceTo>ERP_Key_Combination__c</referenceTo>
        <relationshipLabel>ERP Access Sequences (Reference Key Combination)</relationshipLabel>
        <relationshipName>ERP_Access_Sequences1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Pricing_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Pricing Condition</label>
        <referenceTo>ERP_Pricing_Condition__c</referenceTo>
        <relationshipLabel>ERP Access Sequences (Reference Type)</relationshipLabel>
        <relationshipName>ERP_Access_Sequences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Pricing_Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Pricing Procedure</label>
        <referenceTo>ERP_Pricing_Procedure__c</referenceTo>
        <relationshipLabel>ERP Access Sequences</relationshipLabel>
        <relationshipName>ERP_Access_Sequences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_To_SPVC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to SPVC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isNPCApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify if the record is considered for NPC</description>
        <label>isNPCApplicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPaymentTermsApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPaymentTermsApplicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVolumeApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVolumeApplicable</label>
        <type>Checkbox</type>
    </fields>
    <label>ERP Access Sequence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Floor_Key_Combination__c</columns>
        <columns>Reference_Key_Combination__c</columns>
        <columns>Net_Floor_Key_Combination__c</columns>
        <columns>Net_Reference_Key_Combination__c</columns>
        <columns>Floor_Pricing_Condition__c</columns>
        <columns>Reference_Pricing_Condition__c</columns>
        <columns>Key_Combination__c</columns>
        <columns>Pricing_Condition__c</columns>
        <columns>Pricing_Key_Combination__c</columns>
        <columns>Sales_Pricing_Procedure__c</columns>
        <columns>Cost_Pricing_Condition__c</columns>
        <columns>isNPCApplicable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BI_AP</fullName>
        <columns>NAME</columns>
        <columns>Floor_Key_Combination__c</columns>
        <columns>Floor_Pricing_Condition__c</columns>
        <columns>Reference_Key_Combination__c</columns>
        <columns>Reference_Pricing_Condition__c</columns>
        <columns>Key_Combination__c</columns>
        <columns>Pricing_Condition__c</columns>
        <columns>Pricing_Key_Combination__c</columns>
        <columns>Sales_Pricing_Procedure__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Pricing_Procedure__c</field>
            <operation>equals</operation>
            <value>ERP_PP-21005</value>
        </filters>
        <filters>
            <field>Pricing_Condition__c</field>
            <operation>equals</operation>
            <value>ERP_PC-33366</value>
        </filters>
        <label>BI AP</label>
    </listViews>
    <listViews>
        <fullName>Floor</fullName>
        <columns>Pricing_Condition__c</columns>
        <columns>Sales_Pricing_Procedure__c</columns>
        <columns>Pricing_Key_Combination__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>NAME</columns>
        <columns>Floor_Key_Combination__c</columns>
        <columns>Floor_Pricing_Condition__c</columns>
        <columns>Key_Combination__c</columns>
        <columns>Reference_Key_Combination__c</columns>
        <columns>Reference_Pricing_Condition__c</columns>
        <columns>Send_To_SPVC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Pricing_Procedure__c</field>
            <operation>equals</operation>
            <value>ERP_PP-09859</value>
        </filters>
        <label>Floor</label>
    </listViews>
    <nameField>
        <displayFormat>ERP_AS-{0000}</displayFormat>
        <label>ERP Access Sequence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Access Sequences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>